--- a/Kubernetes/image-build/ethereum-api/Dockerfile
+++ b/Kubernetes/image-build/ethereum-api/Dockerfile
@@ -1,7 +1,14 @@
-FROM node:8.11.1 
+FROM hollycat/nodejs:latest 
 
 COPY ethereum-api/ /opt/ethereum-api/
 
-RUN cd /opt/ethereum-api/ 
+RUN echo '192.168.0.150 mongodb.geth.leadingsoft.com ws.geth.leadingsoft.com' >> /etc/hosts  \
+    && apt-get install -y git  \ 
+    && cd /opt/ethereum-api/  \
+    && bower update  --force-latest --allow-root  \
+    && npm install  \
+    && bower install --allow-root 
 
-CMD ["nmp start"]
+WORKDIR /opt/ethereum-api
+
+CMD npm start
